# MAI_OOP

./: .gitignore  Makefile  README.md  Report.md  main.cpp
lab1/: .gitignore  CMakeLists.txt  main.cpp  report.md  report1.md
lab1/include/: lab1.h
lab1/src/: lab1.cpp
lab1/tests/: test_lab1.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Five.h
lab2/src/: Five.cpp
lab2/tests/: test_lab2.cpp  tests2.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Array.h  Figure.h  Rectangle.h  Rhombus.h  Trapezoid.h
lab3/src/: Array.cpp  Rectangle.cpp  Rhombus.cpp  Trapezoid.cpp
lab3/tests/: test_3.cpp  test_lab3.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Array.h  Figure.h  Point.h  Rectangle.h  Rhombus.h  Trapezoid.h  scalar.h
lab4/tests/: test_lab4.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: dynamic_array.h  memory_resource.h
lab5/tests/: test_lab5.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: NPC.h
lab6/src/: Battle.cpp  NPC.cpp
lab6/tests/: test_lab6.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: Battle.h  DungeonEditor.h  NPCFactory.h  Observer.h
lab7/src/:  NPCFactory.cpp  DungeonEditor.cpp  Observer.cpp
lab7/tests/: test_lab7.cpp
